--- a/package.json
+++ b/package.json
@@ -8,13 +8,24 @@
     "babel-plugin-syntax-object-rest-spread": "6.13.0",
     "babel-preset-env": "1.6.1",
     "babel-register": "6.26.0",
+    "babel-eslint": "^8.2.3",
     "bunyan": "^1.8.12",
     "bunyan-stdout-stream": "^1.3.0",
     "puppeteer": "^1.6.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^5.2.0",
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "lint-staged": "^7.1.3"
+  },
   "scripts": {
-    "start:dev": "node --require babel-register ./index.js"
+    "start:dev": "node --require babel-register ./index.js",
+    "test": "mocha --ui bdd --reporter spec --require babel-register ./test/*.test.js ./test/**/*.test.js",
+    "test:coverage:dev": "nyc --reporter=text mocha --ui bdd --reporter spec --require babel-register ./test/*.test.js ./test/**/*.test.js",
+    "precommit": "lint-staged"
   },
   "babel": {
     "retainLines": true,
@@ -34,6 +45,48 @@
     "plugins": [
       "syntax-object-rest-spread"
     ]
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "eslint-config-airbnb-base"
+    ],
+    "parser": "babel-eslint",
+    "rules": {
+      "no-multi-spaces": 0,
+      "indent": [
+        "error",
+        "tab"
+      ],
+      "no-tabs": 0,
+      "key-spacing": [
+        "error",
+        {
+          "align": {
+            "beforeColon": false,
+            "afterColon": true,
+            "on": "colon"
+          }
+        }
+      ],
+      "no-underscore-dangle": [
+        "error",
+        {
+          "allowAfterThis": true
+        }
+      ],
+      "spaced-comment": 0,
+      "no-trailing-spaces": 0,
+      "arrow-body-style": [
+        1,
+        "as-needed"
+      ],
+      "flowtype/space-before-type-colon": 0,
+      "flowtype/space-after-type-colon": 0
+    }
   },
   "author": "",
   "license": "ISC"
