--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "babel-plugin-syntax-object-rest-spread": "6.13.0",
     "babel-preset-env": "1.6.1",
     "babel-register": "6.26.0",
-    "babel-eslint": "^8.2.3",
     "bunyan": "^1.8.12",
     "bunyan-stdout-stream": "^1.3.0",
     "puppeteer": "^1.6.2"
@@ -19,6 +18,8 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
+    "babel-eslint": "^8.2.3",
+    "husky": "^0.14.3",
     "lint-staged": "^7.1.3"
   },
   "scripts": {
