test(helpers/link.js): add test for link helper

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -5,6 +5,7 @@
     "beforeEach": false
   },
   "rules": {
-    "no-underscore-dangle": "warn"
+    "no-underscore-dangle": "warn",
+    "no-unused-expressions": "warn"
   }
 }
