--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babel-register": "6.26.0",
     "bunyan": "^1.8.12",
     "bunyan-stdout-stream": "^1.3.0",
-    "puppeteer": "^1.6.2"
+    "puppeteer": "^1.6.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
